fix: home style

--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
     <div class="about">
         <div class="container">
             <div class="row">
-                <div class="col-md-8">
+                <div class="col-md-8 mb-4">
                     <h2 class="heading-2">عن المنصة</h2>
                    <h3 class="heading-bold-1">الرؤية</h3>
                     <p class="mb-5">أن نكون مركزاً رائداً في التعليم والبحث الأكاديمي في السنة النبوية ، يُزود الدارس بقاعدة متكاملة من
@@ -475,7 +475,7 @@
                 </div>
                 <div class="col-md-4">
                     <a href="assets/img/video.mp4" data-fancybox="media-videos">
-                        <img src="assets/img/video.png" alt="Video">
+                        <img class="w-100" src="assets/img/video.png" alt="Video">
                     </a>
                 </div>
             </div>
