--- a/videos.html
+++ b/videos.html
@@ -641,10 +641,25 @@
           </div>
        
     </div>
-
-
-
-    <nav aria-label="Page navigation example mt-5" class="numbers">
+    <nav aria-label="Page navigation example" class="w-100">
+        <ul class="pagination pagination-items">
+            <li class="page-item">
+                <a class="page-link" href="#" aria-label="Previous">
+                    <i class="icon icon-right-arrow"></i>
+                    <span class="sr-only">Previous</span>
+                </a>
+            </li>
+            <li class="page-item"><a class="page-link" href="#">1</a></li>
+            <li class="page-item"><a class="page-link active" href="#">2</a></li>
+            <li class="page-item"><a class="page-link" href="#">3</a></li>
+            <li class="page-item">
+                <a class="page-link" href="#" aria-label="Next">
+                    <i class="icon icon-left-arrow"></i>
+                    <span class="sr-only">Next</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
     
       </nav>
 
