--- a/about.html
+++ b/about.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" type="text/css" href="assets/css/slick.css">
         <link rel="stylesheet" type="text/css" href="assets/css/slick-theme.css">
         <link rel="stylesheet" type="text/css" href="assets/css/simplePagination.css">
+        <link rel="stylesheet" type="text/css" href="assets/css/nice-select.css">
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     
         <title>Sunnah - Home</title>
@@ -535,7 +536,7 @@
 
 
 
-<div class="row margin-res reverso2">
+<div class="row margin-res reverso2 mb-5">
    
     <div class="col-md-6 d-flex text margin-res2">
         <div class="special">
@@ -545,7 +546,7 @@
         </div>
   </div>
   <div class="col-md-6">
-    <img src="assets/img/build.png" class="left-img" alt="">
+    <img src="assets/img/build.png" class="left-img mb-5" alt="">
         </div>
 </div>
 
