--- a/blog-details.html
+++ b/blog-details.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" type="text/css" href="assets/css/slick.css">
         <link rel="stylesheet" type="text/css" href="assets/css/slick-theme.css">
         <link rel="stylesheet" type="text/css" href="assets/css/simplePagination.css">
+        <link rel="stylesheet" type="text/css" href="assets/css/nice-select.css">
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     
         <title>Sunnah - Home</title>
@@ -429,7 +430,7 @@
         <p class="heading-2 ">ماهي السنة النبوية ؟</p>
         <div class="d-flex upper align-items-center mb-4 ">
             
-            <img src="assets/img/inf3.png" alt="">
+            <img src="assets/img/inf3.png" alt="" class="little">
             <span> ‏3 يوليو 2021 </span>
           </div>
           <p class="mb-4">لسنة النبوية لها عدة معانٍ فالسُّنّة في اللغة: هي الطريقة والمَنهج، منها قول النبي “فعليكم بسُنّتي ،وسُنّة الخلفاء الراشدين المَهْدِيِّين” رواه الترمذي وغيره وقال: حسن صحيح أي طريقتي ـ والسُّنّة في اصطلاح الفقهاء هي ما يُثاب المرء على فعله ولا يُعاقَب على تركه كصلاة الضُّحى مثلاً ، والسنة في اصطلاح المحدثين هي ما أضيف إلى النبي ـ صلى الله عليه وسلم ـ قولاً أو فعلاً أو وصفًا أو تقريرًا</p>
