--- a/course-details.html
+++ b/course-details.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="assets/css/style-rtl.min.css">
         <link rel="stylesheet" type="text/css" href="assets/css/slick.css">
         <link rel="stylesheet" type="text/css" href="assets/css/slick-theme.css">
+        <link rel="stylesheet" type="text/css" href="assets/css/nice-select.css">
         <link rel="stylesheet" type="text/css" href="assets/css/simplePagination.css">
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     
@@ -433,38 +434,38 @@
 </div>
 </div>
   <!-- information  -->
-  <div class="inf shadow">
+  <div class="inf shadow2">
 <div class="row modify">
 <div class=" col-lg col-md-6 p-0">
-    <div class="inf-box shadow first">
+    <div class="inf-box shadow2 first">
 <img src="assets/img/inf1.png" alt="">
 <h5 class="heading-3-grey">اللغة</h5>
 <h3 class="heading-3">العربية</h3>
     </div>
 </div>
 <div class=" col-lg col-md-6 p-0">
-    <div class="inf-box shadow second">
+    <div class="inf-box shadow2 second">
 <img src="assets/img/inf2.png" alt="">
 <h5 class="heading-3-grey">تاريخ البدء</h5>
 <h3 class="heading-3">‏5 يوليو 2021</h3>
     </div>
 </div>
 <div class=" col-lg col-md-6 p-0">
-    <div class="inf-box shadow">
+    <div class="inf-box shadow2">
 <img src="assets/img/inf3.png" alt="">
 <h5 class="heading-3-grey">عدد سنوات الدراسة</h5>
 <h3 class="heading-3">‏4 سنوات</h3>
     </div>
 </div>
 <div class=" col-lg col-md-6 p-0">
-    <div class="inf-box shadow">
+    <div class="inf-box shadow2">
 <img src="assets/img/inf4.png" alt="">
 <h5 class="heading-3-grey">المستوى</h5>
 <h3 class="heading-3">مستوى متوسط</h3>
     </div>
 </div>
 <div class="col-lg col-md-12 p-0">
-    <div class="inf-box shadow last">
+    <div class="inf-box shadow2 last">
 <img src="assets/img/inf2.png" alt="">
 <h5 class="heading-3-grey">تاريخ الانتهاء</h5>
 <h3 class="heading-3">‏5 يوليو 2021</h3>
