--- a/courses-list.html
+++ b/courses-list.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="assets/css/jquery.fancybox.css" />
     <link rel="stylesheet" href="assets/css/style-rtl.min.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/slick.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/nice-select.css">
     <link rel="stylesheet" type="text/css" href="assets/css/slick-theme.css" />
     <link
       rel="stylesheet"
