--- a/signin.html
+++ b/signin.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/slick.css">
     <link rel="stylesheet" type="text/css" href="assets/css/slick-theme.css">
     <link rel="stylesheet" type="text/css" href="assets/css/simplePagination.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/nice-select.css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
@@ -422,7 +423,7 @@
         <div class="registeration shadow">
 
 
-            <div class="row">
+            <div class="row mb-5">
 
                 <div class="col-xl-6 col-md-12 form-padding">
                     <p class="heading-2">
@@ -439,7 +440,7 @@
 
                     <!-- password -->
                     <div class="input-group mb-3">
-                        <span toggle="#password-field2" class="far fa-eye field-icon toggle-password"></span>
+                        <span toggle="#password-field2" class="icon icon-eye field-icon toggle-password"></span>
 
                         <input id="password-field2" type="password" class="form-control no" name="password"
                             value="secret">
