--- a/success.html
+++ b/success.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/slick.css">
     <link rel="stylesheet" type="text/css" href="assets/css/slick-theme.css">
     <link rel="stylesheet" type="text/css" href="assets/css/simplePagination.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/nice-select.css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
@@ -406,7 +407,7 @@
     </header>
     <!-- HEADER SECTION END -->
 
-    <div class="container text-center px-5">
+    <div class="container text-center success-section">
         <img src="assets/img/trophy.png" alt="">
         <p class="heading-2 mt-4">لقد تم إنشاء حسابك بنجاح</p>
         <button class="btn utl-btn-primary header__nav__login__button mt-4">رجوع إلي الرئيسية</button>
