--- a/videos-albumes.html
+++ b/videos-albumes.html
@@ -20,6 +20,7 @@
       integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" type="text/css" href="assets/css/nice-select.css">
 
     <title>Sunnah - Home</title>
   </head>
@@ -487,8 +488,8 @@
                     data-fancybox="media-videos"
                     class=""
                   >
-                    <img src="assets/img/play.png" class="video-icon" alt="" />
-                    <img class="w-100" src="assets/img/build.png" alt="Video" />
+                  <i class="icon icon-play video-icon"></i>
+                  <img class="w-100" src="assets/img/build.png" alt="Video" />
                   </a>
                 </div>
                 <div class="desc text-center">
@@ -504,8 +505,8 @@
                     data-fancybox="media-videos"
                     class=""
                   >
-                    <img src="assets/img/play.png" class="video-icon" alt="" />
-                    <img class="w-100" src="assets/img/build.png" alt="Video" />
+                  <i class="icon icon-play video-icon"></i>
+                  <img class="w-100" src="assets/img/build.png" alt="Video" />
                   </a>
                 </div>
                 <div class="desc text-center">
@@ -521,8 +522,8 @@
                     data-fancybox="media-videos"
                     class=""
                   >
-                    <img src="assets/img/play.png" class="video-icon" alt="" />
-                    <img class="w-100" src="assets/img/build.png" alt="Video" />
+                  <i class="icon icon-play video-icon"></i>
+                  <img class="w-100" src="assets/img/build.png" alt="Video" />
                   </a>
                 </div>
                 <div class="desc text-center">
@@ -538,78 +539,8 @@
                     data-fancybox="media-videos"
                     class=""
                   >
-                    <img src="assets/img/play.png" class="video-icon" alt="" />
-                    <img class="w-100" src="assets/img/build.png" alt="Video" />
-                  </a>
-                </div>
-                <div class="desc text-center">
-                  <p>لوريم إيبسوم هو ببساطة نص شكلي</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="row mt-4">
-            <div class="col-xl-3 col-md-6">
-              <div class="gallery-box">
-                <div class="position-relative">
-                  <a
-                    href="assets/img/video.mp4"
-                    data-fancybox="media-videos"
-                    class=""
-                  >
-                    <img src="assets/img/play.png" class="video-icon" alt="" />
-                    <img class="w-100" src="assets/img/build.png" alt="Video" />
-                  </a>
-                </div>
-                <div class="desc text-center">
-                  <p>لوريم إيبسوم هو ببساطة نص شكلي</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-xl-3 col-md-6">
-              <div class="gallery-box">
-                <div class="position-relative">
-                  <a
-                    href="assets/img/video.mp4"
-                    data-fancybox="media-videos"
-                    class=""
-                  >
-                    <img src="assets/img/play.png" class="video-icon" alt="" />
-                    <img class="w-100" src="assets/img/build.png" alt="Video" />
-                  </a>
-                </div>
-                <div class="desc text-center">
-                  <p>لوريم إيبسوم هو ببساطة نص شكلي</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-xl-3 col-md-6">
-              <div class="gallery-box">
-                <div class="position-relative">
-                  <a
-                    href="assets/img/video.mp4"
-                    data-fancybox="media-videos"
-                    class=""
-                  >
-                    <img src="assets/img/play.png" class="video-icon" alt="" />
-                    <img class="w-100" src="assets/img/build.png" alt="Video" />
-                  </a>
-                </div>
-                <div class="desc text-center">
-                  <p>لوريم إيبسوم هو ببساطة نص شكلي</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-xl-3 col-md-6">
-              <div class="gallery-box">
-                <div class="position-relative">
-                  <a
-                    href="assets/img/video.mp4"
-                    data-fancybox="media-videos"
-                    class=""
-                  >
-                    <img src="assets/img/play.png" class="video-icon" alt="" />
-                    <img class="w-100" src="assets/img/build.png" alt="Video" />
+                  <i class="icon icon-play video-icon"></i>
+                  <img class="w-100" src="assets/img/build.png" alt="Video" />
                   </a>
                 </div>
                 <div class="desc text-center">
@@ -627,8 +558,8 @@
                     data-fancybox="media-videos"
                     class=""
                   >
-                    <img src="assets/img/play.png" class="video-icon" alt="" />
-                    <img class="w-100" src="assets/img/build.png" alt="Video" />
+                  <i class="icon icon-play video-icon"></i>
+                  <img class="w-100" src="assets/img/build.png" alt="Video" />
                   </a>
                 </div>
                 <div class="desc text-center">
@@ -644,8 +575,8 @@
                     data-fancybox="media-videos"
                     class=""
                   >
-                    <img src="assets/img/play.png" class="video-icon" alt="" />
-                    <img class="w-100" src="assets/img/build.png" alt="Video" />
+                  <i class="icon icon-play video-icon"></i>
+                  <img class="w-100" src="assets/img/build.png" alt="Video" />
                   </a>
                 </div>
                 <div class="desc text-center">
@@ -661,8 +592,8 @@
                     data-fancybox="media-videos"
                     class=""
                   >
-                    <img src="assets/img/play.png" class="video-icon" alt="" />
-                    <img class="w-100" src="assets/img/build.png" alt="Video" />
+                  <i class="icon icon-play video-icon"></i>
+                  <img class="w-100" src="assets/img/build.png" alt="Video" />
                   </a>
                 </div>
                 <div class="desc text-center">
@@ -678,8 +609,78 @@
                     data-fancybox="media-videos"
                     class=""
                   >
-                    <img src="assets/img/play.png" class="video-icon" alt="" />
-                    <img class="w-100" src="assets/img/build.png" alt="Video" />
+                  <i class="icon icon-play video-icon"></i>
+                  <img class="w-100" src="assets/img/build.png" alt="Video" />
+                  </a>
+                </div>
+                <div class="desc text-center">
+                  <p>لوريم إيبسوم هو ببساطة نص شكلي</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row mt-4">
+            <div class="col-xl-3 col-md-6">
+              <div class="gallery-box">
+                <div class="position-relative">
+                  <a
+                    href="assets/img/video.mp4"
+                    data-fancybox="media-videos"
+                    class=""
+                  >
+                  <i class="icon icon-play video-icon"></i>
+                  <img class="w-100" src="assets/img/build.png" alt="Video" />
+                  </a>
+                </div>
+                <div class="desc text-center">
+                  <p>لوريم إيبسوم هو ببساطة نص شكلي</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-xl-3 col-md-6">
+              <div class="gallery-box">
+                <div class="position-relative">
+                  <a
+                    href="assets/img/video.mp4"
+                    data-fancybox="media-videos"
+                    class=""
+                  >
+                  <i class="icon icon-play video-icon"></i>
+                  <img class="w-100" src="assets/img/build.png" alt="Video" />
+                  </a>
+                </div>
+                <div class="desc text-center">
+                  <p>لوريم إيبسوم هو ببساطة نص شكلي</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-xl-3 col-md-6">
+              <div class="gallery-box">
+                <div class="position-relative">
+                  <a
+                    href="assets/img/video.mp4"
+                    data-fancybox="media-videos"
+                    class=""
+                  >
+                  <i class="icon icon-play video-icon"></i>
+                  <img class="w-100" src="assets/img/build.png" alt="Video" />
+                  </a>
+                </div>
+                <div class="desc text-center">
+                  <p>لوريم إيبسوم هو ببساطة نص شكلي</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-xl-3 col-md-6">
+              <div class="gallery-box">
+                <div class="position-relative">
+                  <a
+                    href="assets/img/video.mp4"
+                    data-fancybox="media-videos"
+                    class=""
+                  >
+                  <i class="icon icon-play video-icon"></i>
+                  <img class="w-100" src="assets/img/build.png" alt="Video" />
                   </a>
                 </div>
                 <div class="desc text-center">
