--- a/blog.html
+++ b/blog.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="assets/css/style-rtl.min.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/slick.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/slick-theme.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/nice-select.css">
     <!-- <link rel="stylesheet" type="text/css" href="assets/css/simplePagination.css"> -->
     <link
       href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
